k8s/policies/networkpolicies/platform/allow-to-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-monitoring
  namespace: fleetops-platform
  labels:
    app.kubernetes.io/name: fleetops-network-policy
    app.kubernetes.io/component: network-policy
    app.kubernetes.io/environment: platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: fleetops-gateway-proxy
  policyTypes:
    - Egress
  egress:
    # Allow gateway-proxy to reach all services in monitoring namespace
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 80
